updated home page

--- a/youth-center-app/templates/admin/dashboard.html.twig
+++ b/youth-center-app/templates/admin/dashboard.html.twig
@@ -35,9 +35,18 @@
             <div class="col-md-4">
                 <div class="card shadow-sm border-0">
                     <div class="card-body">
-                        <h5 class="card-title"> Manage Activities</h5>
+                        <h5 class="card-title">  🎮 Manage Activities</h5>
                         <p class="card-text">View or update activities in each center.</p>
                        <a href="{{ activities_crud_url }}" class="btn btn-primary">Go to Activities</a>
+                    </div>
+                </div>
+            </div>
+             <div class="col-md-4">
+                <div class="card shadow-sm border-0">
+                    <div class="card-body">
+                        <h5 class="card-title">  Manage Center managers</h5>
+                        <p class="card-text">View or update managers of each center.</p>
+                       <a href="{{ centermanager_crud_url }}" class="btn btn-primary">Go to Managers</a>
                     </div>
                 </div>
             </div>
