--- a/youth-center-app/templates/admin/dashboard.html.twig
+++ b/youth-center-app/templates/admin/dashboard.html.twig
@@ -50,6 +50,15 @@
                     </div>
                 </div>
             </div>
+             <div class="col-md-4">
+                <div class="card shadow-sm border-0">
+                    <div class="card-body">
+                        <h5 class="card-title">  Manage Pictures </h5>
+                        <p class="card-text">View or update the pictures of each center.</p>
+                       <a href="{{ pictures_crud_url }}" class="btn btn-primary">Go to Pictures</a>
+                    </div>
+                </div>
+            </div>
             
         </div>
     </div>
